--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+html {
+    height: 100%;
+    min-width: 512px;
+}
+ 
+body {
+    height: 100%;
+    background-color: #fff;
+    margin: 0;
+}
