新規登録追加

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,3 +1,5 @@
+<h1>近畿大学福岡キャンパス</h1>
+<hr>
 <%= form_tag login_login_path, method: :post do %>
 <div id="login_main">
     <div id="login">
@@ -16,4 +18,7 @@
         </div>
     </div>
 </div>
+
 <% end %>
+<p><center><%= link_to '新規の方はこちら', '/users/new' %></center></p>
+ 
