ログイン途中まで

--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,5 +1,6 @@
 <h1>近畿大学福岡キャンパス</h1>
 <hr>
+<h2>ログイン</h2>
 <%= form_tag login_login_path, method: :post do %>
 <div id="login_main">
     <div id="login">
