--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,6 @@
+<h1>近畿大学福岡キャンパス</h1>
+<hr>
+<h2>新規登録</h2>
 <%= form_for @user , url: {action: :create} do |f| %>
 <div id="login_main">
   <div id="login">
