--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -9,6 +9,12 @@
     </div>
     <hr />
     <div>
-        
+        <% @subjects.each do |sub| %>
+            <div>
+                <%= Subject.find(sub.subject_id).name %>
+                <%= link_to '履修取り消し', course_path(id: sub.subject_id), method: :delete %>
+                <%#= sub.name %>
+            </div>
+        <% end %>
     </div>
 </div>
