レイアウトなど

--- a/app/views/login/error.html.erb
+++ b/app/views/login/error.html.erb
@@ -1,1 +1,7 @@
-error
+<div style="background-color:#EDF7FF;width:1250px;padding:20px;"><h1>近畿大学福岡キャンパス</h1></div>
+<hr>
+<h2>エラー</h2>
+<p>IDまたはパスワードに誤りがあります。</p>
+<p>
+    <%= link_to'戻る',:back %>
+</p>
