--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,4 +1,4 @@
-<h1>近畿大学福岡キャンパス</h1>
+<div style=background-image: url(bg_abstract2_green.png);width:1250px;padding:20px;><h1>近畿大学福岡キャンパス</h1></div>
 <hr>
 <h2>ログイン</h2>
 <%= form_tag login_login_path, method: :post do %>
@@ -22,4 +22,3 @@
 
 <% end %>
 <p><center><%= link_to '新規の方はこちら', '/users/new' %></center></p>
- 
