--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,6 @@
-<h1>近畿大学福岡キャンパス</h1>
+<div style="background-color:#EDF7FF;width:1250px;padding:20px;"><h1>近畿大学福岡キャンパス</h1></div>
 <hr>
+
+<iframe src="https://calendar.google.com/calendar/embed?src=1811140049h%40ed.fuk.kindai.ac.jp&ctz=Asia%2FTokyo" align="left" style="border: 0" width="350" height="250" frameborder="0" scrolling="no"></iframe>
+
 <p><%=link_to'履修科目一覧', subjects_path %></p>
-<P></P>
