--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>近畿大学福岡キャンパス</h1>
+<div style="background-color:#EDF7FF;width:1250px;padding:20px;"><h1>近畿大学福岡キャンパス</h1></div>
 <hr>
 <h2>新規登録</h2>
 <%= form_for @user , url: {action: :create} do |f| %>
