--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,30 +1,19 @@
 <div>
     <div>
         <%= link_to '戻る', root_path %>
-        <% if isTeacher(-2) %>
-            <%= link_to '科目を作成する', subjects_create_path %>
+        <% if isTeacher %>
+            <%= link_to '科目を作成する', new_subject_path %>
         <% else %>
             <%= link_to '履修登録をする', courses_path %>
         <% end %>
     </div>
     <hr />
     <div>
-        <% @subjects.each do |sub| %>
-            <div id="subject_plate">
-                
-                <div class="name">
-                    <div class="decoration">
-                        <%= Subject.find(sub.subject_id).name %>
-                    </div>
-                </div>
-                <%= link_to(course_path(id: sub.subject_id), method: :delete) do %>
-                    <button class="button">
-                        <div class="decoration">履修を取り消す</div>
-                    </button>
-                <% end %>
-                
-                <%#= sub.name %>
-            </div>
+        <% if isTeacher %>
+            <%= render 'listForStaff' %>
+            <%= render 'listAllSubjects' %>
+        <% else %>
+            <%= render 'listRegistrationCourses' %>
         <% end %>
     </div>
 </div>
