--- a/app/assets/stylesheets/subjects.scss.erb
+++ b/app/assets/stylesheets/subjects.scss.erb
@@ -2,6 +2,26 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#subject {
+    .title {
+    
+    }
+    
+    .header {
+    
+    }
+    
+    .toolbar {
+    
+    }
+    
+    .button {
+    
+    }
+    
+    
+}
+
 #subject_plate {
     margin-bottom: 1rem;
     margin-left: 1em;
@@ -10,10 +30,20 @@
     padding-left: 1em;
     height: 200px;
     
-    background-image: url("<%= asset_path('neko.jpeg') %>");
     background-size: cover;
-    
+    border-radius: 10px;
+        
     position: relative;
+    
+    .link {
+        a {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        }
+    }
     
     .name {
         font-size: xxx-large;
@@ -33,6 +63,10 @@
         //padding: 5px;
         font-size: normal;
         font-weight: bold;
+        
+        a {
+        
+        }
     }
     
     .decoration {
