--- a/app/views/subjects/_listForStaff.html.erb
+++ b/app/views/subjects/_listForStaff.html.erb
@@ -4,7 +4,7 @@
         あなたの担当の科目
     </div>
     <% s.each do |sub| %>
-        <div id="subject_plate">
+        <div id="subject_plate"  style="background-image : url(<%= asset_path('neko.jpeg') %>)">
             
             <div class="link">
                 <%= link_to '', subject_path(sub) %>
