メイン画面修正と登録時のエラー表示

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,15 @@
 <div style="background-color:#EDF7FF;width:1250px;padding:20px;"><h1>近畿大学福岡キャンパス</h1></div>
 <hr>
 <h2>新規登録</h2>
+<% if @user.errors.present? %>
+<h3> <font color="red">エラーがあります。</font></h3>
+<ul>
+<% @user.errors.full_messages.each do |msg| %>
+<li><%= msg %></li>
+<% end %>
+</ul>
+<% end %>
+
 <%= form_for @user , url: {action: :create} do |f| %>
 <div id="login_main">
   <div id="login">
