--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,12 @@
 <div style="background-color:#EDF7FF;width:1250px;padding:20px;"><h1>近畿大学福岡キャンパス</h1></div>
 <hr>
 
+<p align="center"><%=link_to'履修科目一覧', subjects_path %>　　　<%=link_to'時間割' %>　　　<%=link_to'成績照会'%>　　　<%=link_to'アンケート'%>　　　<%=link_to'就活関連' %>　　　<%=link_to'質問・お問い合わせ'%>　　　</p>
+<hr>
+<div style="background-color:#FFCBCB;width:330px;margin:5px; padding:10px; border:1px solid black;">
+<h2 align="left">おしらせ</h2>
+<p>現在は特にありません</p>
+</div>
+
 <iframe src="https://calendar.google.com/calendar/embed?src=1811140049h%40ed.fuk.kindai.ac.jp&ctz=Asia%2FTokyo" align="left" style="border: 0" width="350" height="250" frameborder="0" scrolling="no"></iframe>
 
-<p><%=link_to'履修科目一覧', subjects_path %></p>
