--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,26 @@
 // Place all the styles related to the main controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#main_toolbar {
+    position: relative;
+    justify-content: space-evenly;
+    display: flex;
+    flex-wrap: wrap;
+    
+    .text {
+        text-align: center;
+        position: relative;
+        flex: 1;
+        
+        .url{
+            a {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+}
