--- a/app/assets/stylesheets/subjects.scss.erb
+++ b/app/assets/stylesheets/subjects.scss.erb
@@ -41,9 +41,10 @@
     padding-right: 1em;
     padding-left: 1em;
     height: 150px;
+    max-height: 200px;
     min-width: 250px;
     //width: 300px;
-    max-width: 400px;
+    //max-width: 40%;
     background-size: cover;
     border-radius: 10px;
         
