--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -1,3 +1,4 @@
+<%= render template: "main/_header" %>
 <%= form_for @s, url: {action: :create} do |f| %>
     <div>
         <%= f.label :name, '科目名' %>
