--- a/app/assets/stylesheets/subjects.scss.erb
+++ b/app/assets/stylesheets/subjects.scss.erb
@@ -2,34 +2,142 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#s_toolbar {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    
+    padding-left: 3em;
+    padding-right: 3em;
+    
+    position: relative;
+    justify-content: space-evenly;;
+    display: flex;
+    flex-wrap: wrap;
+    
+    //max-width: 10em;
+    
+    flex: 1;
+    
+    border-bottom: 3px dashed  LIGHTBLUE;
+    
+    .text {
+        background-color:#ffe5ff;
+        margin-right: 0.5em;
+        margin-left: 0.5em;
+        padding-right: 1em;
+        padding-left: 1em;
+        margin-bottom: 3px;
+        white-space: nowrap;
+        text-align: center;
+        vertical-align: middle;
+        
+        text-align: center;
+        min-width: auto;
+        width: auto;
+        white-space: nowrap;
+    
+        position: relative;
+        flex: 6;
+        
+        border-radius: 25px;
+        border: 2px solid #999;
+        
+        &:hover {
+            background-color:#efe0ff;
+        }
+        
+        .url{
+            a {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+}
+
+#notice {
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    
+    padding-top: 2em;
+    padding-bottom: 2em;
+
+    position: relative;
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    
+    //max-width: 10em;
+    border-bottom: 3px dashed  LIGHTBLUE;
+    flex: 1;
+    
+    .text {
+        font-size: xx-large;
+        font-weight: bold;
+        
+        background-color: #efffe0;
+        margin-right: 2em;
+        margin-left: 2em;
+        padding-right: 1em;
+        padding-left: 1em;
+        margin-bottom: 3px;
+        text-align: center;
+        vertical-align: middle;
+        min-width: auto;
+        width: auto;
+    
+        position: relative;
+        flex: 6;
+        
+        border-radius: 25px;
+        border: 4px solid #999;
+        
+        &:hover {
+            background-color: #d6ffd6;
+        }
+        
+        .url{
+            a {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+}
+
 #subject {
+    
     .title {
-    
+        padding-top: 20px;
+        padding-right: 20px;
+        padding-left: 20px;
+        padding-bottom: 10px;
+        background-size: cover;
+        background-position: left;
+        
+        border-bottom: 3px dashed  LIGHTBLUE;
+        
+        h1 {
+            margin: 0;
+            margin-bottom: 15px;
+            text-align: center;
+        }
     }
-    
-    .header {
-    
-    }
-    
-    .toolbar {
-    
-    }
-    
-    .button {
-    
-    }
-    
-    
 }
 
 #group {
-    margin-top: 1em;
-    margin-left: calc(5% + 0.5em);
-    margin-right: calc(5% + 0.5em);
-    //margin-left: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
+    position: relative;
+    justify-content: space-between;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     flex: 1;
 }
 
@@ -46,7 +154,8 @@
     //width: 300px;
     //max-width: 40%;
     background-size: cover;
-    border-radius: 10px;
+    background-position: left;
+    border-radius: 15px;
         
     position: relative;
     flex: 1;
