--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -1,9 +1,24 @@
 <%= render template: "main/_header" %>
-<%= form_for @s, url: {action: :create} do |f| %>
+<div id="content">
     <div>
-        <%= f.label :name, '科目名' %>
-        <%= f.text_field :name %>
+        <%= image_tag("/image/subject?id=#{params[:id]}") %>
     </div>
     
-    <%= f.submit '作成' %>
-<% end %>
+    <%= form_for @s, url: {action: :create} do |f| %>
+        <div>
+            <%= f.label :name, '科目名' %>
+            <%= f.text_field :name %>
+        </div>
+        
+        <div>
+            <%= f.label :description, 'この講義の説明' %>
+            <%= f.text_area :description %>
+        </div>
+        
+        <div>
+            <%= f.file_field :image %>
+        </div>
+        
+        <%= f.submit '作成' %>
+    <% end %>
+</div>
