--- a/app/views/main/_header.html.erb
+++ b/app/views/main/_header.html.erb
@@ -1,5 +1,5 @@
 <div id="header">
-    <%= render 'title' %>
+    <%= render template: 'main/_title' %>
     
     <div id="main_toolbar">
         <div class="text">
