--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>SMS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.2">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -20,5 +21,7 @@
     <% else %>
       <%= yield %>
     <% end %>
+    <%= render template: 'main/_notie' %>
+    <%#= render template: 'main/_notienow' %>
   </body>
 </html>
