--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,5 +1,10 @@
 <%= form_tag login_login_path, method: :post do %>
     <div id="login_main">
+        <%if flash.now[:notice] %>
+            <script>
+                notie.alert({ type: 'error', text: "<%= flash[:notice] %>", stay: true })
+            </script>
+        <% end %>
         <div id="login">
             <div class="title">
                 近畿大学福岡キャンパス
